# AI-face-detection

./: README.md  camera.py  pyproject.toml
