[tool.poetry]
name = "facedetection"
version = "0.1.0"
description = ""
authors = ["Victor <joaovictors193203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
